# DataSeer

./: README.md  README.zh-CN.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
apps/admin/: crud.py  views.py
apps/admin/model/: __init__.py  m2m.py  menu.py  org.py  param.py  role.py  user.py
apps/admin/param/: __init__.py  menu.py  org.py  param.py  role.py  user.py
apps/admin/schema/: __init__.py  menu.py  org.py  param.py  role.py  user.py
apps/ai/: crud.py  views.py
apps/ai/model/: __init__.py  data.py  image.py  model.py
apps/ai/mstore/: data.py  model.py
apps/ai/param/: __init__.py  image.py  model.py
apps/ai/schema/: __init__.py  data.py  image.py  model.py
apps/auth/: auth.py  token.py  views.py
apps/datamgr/: crud.py  views.py
apps/datamgr/model/: __init__.py  datasource.py
apps/datamgr/param/: __init__.py  datasource.py
apps/datamgr/schema/: __init__.py  datasource.py
apps/ml/: crud.py  views.py
apps/ml/algo/: algo_main.py  algo_trainable.py  trainable_builder.py  trainable_tpl.py
apps/ml/dataset/: dataset_main.py
apps/ml/eda/: chart_plotly.py  eda_main.py  feature_select.py
apps/ml/experiment/: experiment.py
apps/ml/model/: __init__.py  algo.py  dataset.py  eda.py  flow.py  workflow.py
apps/ml/param/: __init__.py  algo.py  dataset.py  eda.py  flow.py
apps/ml/schema/: __init__.py  algo.py  dataset.py  eda.py  flow.py  workflow.py
apps/ml/workflow/: flow_main.py
apps/sys/: crud.py  views.py
apps/sys/model/: __init__.py  access.py  action.py
apps/sys/param/: __init__.py  logaccess.py  logaction.py
apps/sys/schema/: __init__.py  logaccess.py  logaction.py
apps/vis/: crud.py  views.py
apps/vis/model/: __init__.py  datareport.py  dataset.py  dataview.py
apps/vis/param/: __init__.py  datareport.py  dataset.py  dataview.py
apps/vis/schema/: __init__.py  datareport.py  dataset.py  dataview.py
config/: development.py  production.py  router.py  settings.py
core/: crud.py  data_types.py  database.py  dependencies.py  docs.py  enum.py  event.py  exception.py  logger.py  middleware.py  mongo_manage.py  validator.py
db/: db_base.py
msgq/: redis_client.py  redis_listener.py
utils/: count.py  data_loader.py  db_executor.py  db_getter.py  ray_reporter.py  ray_tuner.py  response.py  status.py  tools.py
utils/excel/: excel_manage.py  excel_schema.py  import_manage.py  write_xlsx.py
utils/file/: file_base.py  file_manage.py
utils/ray/: pytorch_trainer.py  ray_dataloader.py  ray_pipeline.py  ray_reporter.py  ray_trainer.py  ray_workflow.py  sklearn_trainer.py
